# arcaflow-plugin-iperf3

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_iperf3/: __main__.py  cli.py  iperf3_plugin.py  iperf3_schema.py
configs/: iperf3-client-example.yaml  iperf3-server-example.yaml
tests/: test_arcaflow_plugin_iperf3.py  test_iperf3_plugin.py
