[tool.poetry]
name = "arcaflow-plugin-iperf3"
version = "0.1.0"
description = ""
authors = ["Arcalot"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="iperf3_plugin.py", from="./arcaflow_plugin_iperf3"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.10.3"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^2.0.0"
pydocstyle = "^6.1.1"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
